# LLM_ChatGPT_Projects

fragmapper/: CHANGELOG.md  README.md  pyproject.toml  reference.txt  requirements.txt
fragmapper/docs/: CHANGE_PROTOCOL.md  FragMapper_Router.md  FragranticaMapper.md  ParfumoMapper.md
fragmapper/misc/: codeReviewOne260110.txt  projectStart260110.txt
fragmapper/project_files/: CrosswalkMapper.md  FragMapper_Router.md  FragranticaMapper.md  ParfumoMapper.md  fragmapper_rules.yml
fragmapper/src/fragmapper/: __init__.py  cli.py  router.py
fragmapper/src/fragmapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fragmapper/src/fragmapper/agents/: __init__.py  base.py  crosswalk.py  fragrantica.py  parfumo.py
fragmapper/src/fragmapper/models/: __init__.py  schemas.py
fragmapper/src/fragmapper/utils/: __init__.py  normalizer.py
fragmapper/tests/: README.md  __init__.py  cases.json  test_consistency.py  test_contracts.py  test_parfumo.py  test_router.py
fragmapper/tests/expected/: DESC_TO_PARFUMO_URL.jsonl
fragmapper/tools/: sync_project_files.py
